Fixed font on mobile.

--- a/2000/css/styles.scss
+++ b/2000/css/styles.scss
@@ -1,5 +1,5 @@
 body {
-    font-family: "Comic Sans MS", "Comic Sans", cursive;
+    font-family: "Comic Sans MS", "Comic Sans", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     padding-top: 50px;
